# Bewler

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CNAME  DEPLOYMENT.md  INSTALL_TOML.md  README.md  auto_calibrate.py  camera_config.py  camera_preview.py  camera_setup.md  comprehensive_test_report.txt  docker-compose.prod.yml  mypy.ini  pyproject.toml  quick_test.sh  requirements.txt  setup.py  setup_cameras.py  setup_cameras.sh  start_camera_setup.sh  test_bridge.js  test_calibration_fix.py  test_detection.py  utils.py
.github/: labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  task.yml  visual_artifact.yml
.github/workflows/: add-to-project.yml  auto-label-area.yml  close-all-issues.yml  docs.yml  lint-python.yml  populate-from-todo-files.yml  pr-management.yml  pr-welcome.yml  pre-commit.yml  stale-issues.yml  status-automation.yml  sync-labels.yml  todo-to-issues.yml
Autonomy/: QUICKSTART.md
Autonomy/code/: README_UTILITIES.md  STREAMLINING_SUMMARY.md  test_led_coordination.py  utilities.py
Autonomy/code/safety_system/: CMakeLists.txt  setup.cfg  setup.py
Autonomy/code/safety_system/autonomy_safety_system/: __init__.py  emergency_response_coordinator.py  proximity_monitor.py  redundant_safety_monitor.py  safety_dashboard.py  safety_integration_tester.py  safety_watchdog.py
Autonomy/code/safety_system/config/: safety_system.yaml
Autonomy/code/safety_system/launch/: safety_system.launch.py
Autonomy/code/safety_system/resource/: autonomy_safety_system
Autonomy/code/sensor_bridge/: CMakeLists.txt  README.md  ROS2_MIGRATION_GUIDE.md  setup.cfg  setup.py  test_sensor_bridge.py
Autonomy/code/sensor_bridge/autonomy_sensor_bridge/: __init__.py  websocket_bridge.py
Autonomy/code/sensor_bridge/config/: sensor_bridge.yaml
Autonomy/code/sensor_bridge/launch/: sensor_bridge.launch.py
Autonomy/code/sensor_bridge/scripts/: sensor_bridge_node.py
Autonomy/code/sensor_bridge/sensor_bridge/: __init__.py  websocket_bridge.py
Autonomy/docs/: Doxyfile  TechnicalOverview.md
Autonomy/interfaces/: usage_examples.py
Autonomy/launch/: system_integration.launch.py
Autonomy/ros2_ws/src/autonomy_safety_system/: CMakeLists.txt  setup.cfg
Autonomy/ros2_ws/src/autonomy_safety_system/autonomy_safety_system/: emergency_response_coordinator.py  proximity_monitor.py  redundant_safety_monitor.py  safety_dashboard.py  safety_integration_tester.py  safety_watchdog.py  setup.py
Autonomy/scripts/: benchmark_system.sh  create_ros2_packages.py  daily_velocity_check.py  decision_framework.py  deployment_check.sh  dev_test.sh  health_check.sh  software_estop_example.py  start_safety_testing.sh  stop_safety_testing.sh  system_launch.sh  system_stop.sh  system_test.sh  test_full_system.sh  test_navigation.sh  test_simulation.sh  validate_compete.sh  validate_deploy.sh  validate_infrastructure.py  validate_quick.sh  velocity_tools.py
Autonomy/simulation/: CMakeLists.txt  SIMULATION_VALIDATION_CHECKLIST.md
Autonomy/tests/: integration_test.py  test_dataflow_consistency.py  test_system_integration.py
bridges/: README.md  can_mock_simulator.py  map_data_bridge.py  priority_message_router.py  slam_data_bridge.py  websocket_mission_bridge.py  websocket_slam_bridge.py
calibration/docs/: README.md
calibration/scripts/: quick_calibration.py  verify_installation.py
calibration/tools/: requirements-test.txt  setup_cameras.sh
calibrations/: arm_base.json  arm_wrist.json  chasis.json  mast.json  mast_camera.json  underchasis.json
config/: development.yaml  production.yaml
docker/: Dockerfile.prod  README.md
docs/: Doxyfile  INSTALL.md  Makefile  README.md  build_docs.py  build_docs.sh  conf.py  getting_started.rst  index.rst  installation.rst  jsdoc.json  overview.rst  quickstart.rst  requirements.txt
docs/_extensions/: code_analysis.py  ros2_graphs.py
docs/api/: index.rst
docs/architecture/: communication_patterns.rst  overview.rst  ros2_system_graphs.rst
docs/calibration/: camera_calibration.rst
docs/camera/: README.md  libcamera_installation.md  pi_camera_setup.md
docs/development/: contributing.rst
docs/docs/: conf.py  index.rst
docs/overview/: index.rst
frontend/: Dockerfile.prod  index.html  jsdoc.conf.json  jsdoc.json  nginx.conf  test_bridge.js
frontend/src/: App.jsx  index.css
launch/: README.md  integrated_system.launch.py  mission_system.launch.py  rover_simulation.launch.py  slam_bridge.launch.py
missions/: config_validator.py  delivery_mission.py  exceptions.py  follow_me_mission.py  mission_behaviors.py  mission_executor.py  monitoring_system.py  object_detection_mission.py  ros2_types.py  system_health_monitor.py  teleoperation_data_processor.py  waypoint_navigation_mission.py
scripts/: README.md  build_docs.sh  build_universal_docker.sh  camera_check.py  camera_validator.py  convert_md_to_rst.py  extract-todos-to-issues.py  fix_all_style_issues.py  fix_style_issues.py  launch_autonomy_system.py  manage_submodules.sh  production_health_check.py  quick_calibration.py  remove_emojis.py  run_simulation_tests.py  setup_ros2_env.sh  software_system_demo.py  test_aruco_servoing.py  test_messaging_consistency.py  test_system_integration.py  validate_config.py  verify_installation.py
src/: __init__.py
src/aruco/: __init__.py  servoing.py
src/camera/: __init__.py  calibration.py  calibration_service.py  dual_pipeline_node.py
src/charuco/: calibrator.py  generator.py
src/launch/: __init__.py  calibration_service.launch.py  dual_pipeline.launch.py  pi5_brain.launch.py
src/utils/: __init__.py  camera.py  system.py
submodules/: README.md
tests/: README_AUTOMATED_TESTING.md  automated_test_platform.py  conftest.py  hardware_abstraction.py  pytest.ini  run_tests.py  standalone_safety_system.py  standalone_state_machine.py  test_can_mock_system.py
tests/demo/: demo_autonomy_response.py
tests/fixtures/: mock_sensors.py
tests/integration/: test_autonomy_teleoperation_integration.py  test_basic_ros2_integration.py  test_full_autonomy_teleoperation.py  (+5 more)
tools/: requirements.txt
(+1080 files in other folders)
