[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urc-machiato-2026"
version = "1.0.0"
description = "University Rover Challenge 2026 Robotics Platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "URC Machiato 2026 Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: Robotics",
]
requires-python = ">=3.8"
dependencies = [
    # Core documentation
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",

    # Multi-language support
    "breathe>=4.35.0",           # C++ documentation
    "sphinx-js>=3.1.2",          # JavaScript/TypeScript documentation
    "myst-parser>=0.18.0",       # Markdown support

    # Additional extensions
    "sphinx-copybutton>=0.5.0",  # Copy button for code blocks
    "sphinx-autodoc-typehints>=1.19.0",

    # Development and testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",

    # Data science (for analysis scripts)
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "breathe>=4.35.0",
    "sphinx-js>=3.1.2",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.19.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]
analysis = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/urc-machiato-2026"
Documentation = "https://urc-machiato-2026.readthedocs.io/"
Repository = "https://github.com/your-org/urc-machiato-2026"
Issues = "https://github.com/your-org/urc-machiato-2026/issues"

[tool.setuptools]
packages = ["scripts"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | frontend/node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["scripts"]
skip = ["docs", "frontend/node_modules", "Autonomy/ros2_ws"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "roslib.*",
    "sensor_msgs.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=scripts --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
